# anicolla-player

./: .env  .gitignore  Cargo.toml  Makefile
analysis_sqls/: matcher.sql  record_full.sql  youtube_record_full.sql
data_collector/: Cargo.toml  README.md  raw_list_utf_8.html  raw_top_utf_8.html
data_collector/src/: config.rs  consts.rs  crawler.rs  main.rs  model.rs  scraper.rs
data_matcher/: Cargo.toml
data_matcher/src/: main.rs  model.rs
job/: Cargo.toml
mp3_downloader/: main.py
web/: index.html  package-lock.json  package.json
web/scripts/: json-compress.ts
web/src/: App.tsx  main.tsx
web/src/components/controller/: Controller.tsx  MiniController.tsx
web/src/components/icons/: Coffee.tsx  Cross.tsx  Cup.tsx  Dots.tsx  Headphone.tsx  Heart.tsx  Loop.tsx  Minus.tsx  Movie.tsx  Music.tsx  Next.tsx  Play.tsx  Plus.tsx  Prev.tsx  Save.tsx  Shuffle.tsx  Sign.tsx  SimpleTrash.tsx  Stop.tsx  Trash.tsx  Voldown.tsx  Volup.tsx  Warn.tsx
web/src/components/menu/: Menu.tsx
web/src/components/modal/: DeleteModal.tsx  UpsertModal.tsx
web/src/components/player/: Player.tsx
web/src/hooks/: AudioPlayer.tsx  hooks_utils.ts  useInitializePredefinedPlaylist.tsx  useInitializeUserPlaylist.tsx  useInitializeWebAudio.tsx  useInitializeYoutubePlayer.tsx  usePlayerControl.tsx  useToast.tsx  useTrashUserPlaylist.tsx  useUpsertUserPlaylist.tsx
web/src/stores/: Provider.tsx  models.ts  player.ts  playlist.ts  stores_utils.ts
youtube_data_fetcher/: Cargo.toml
youtube_data_fetcher/src/: config.rs  main.rs  model.rs  request.rs
(+9 files in other folders)
