[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10.0"
scraper = "0.17.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
encoding_rs = "0.8.33"
bytes = "1.5.0"
serde = "1.0.200"
serde_json = "1.0.107"
