[package]
name = "youtube_data_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.29.0"
serde_json = "1.0.116"
